--- a/Restaurante.html
+++ b/Restaurante.html
@@ -7,10 +7,16 @@
 </head>
 <body>
     <h1>Lista de Restaurantes:</h1>
-    <Li><a href="https://www.facebook.com/restaurantedegustarevha/?locale=pt_BR">Degustare</a></li>
-    <Li><a href="https://www.facebook.com/restaurantedegustarevha/?locale=pt_BR">Degustare</a></li>        
-    <Li><a href="https://www.facebook.com/restaurantedegustarevha/?locale=pt_BR">Degustare</a></li>   
-    <Li><a href="https://www.facebook.com/restaurantedegustarevha/?locale=pt_BR">Degustare</a></li>
-    <Li><a href="https://www.facebook.com/restaurantedegustarevha/?locale=pt_BR">Degustare</a></li>
+    <Li><a href="https://www.facebook.com/restaurantedegustarevha/?locale=pt_BR">1° Degustare</a></li>
+    <Li><a href="https://www.facebook.com/lavarandavha/?locale=pt_BR">2° Choperia La Lavanda</a></li>        
+    <Li><a href="https://www.instagram.com/rst_nabrasa/">3° Na Brasa</a></li>   
+    <Li><a href="https://www.facebook.com/BarolloPizza/?locale=pt_BR">4° Barollo Pizarria</a></li>
+    <Li><a href="https://www.instagram.com/lanchonete.zerograu/">5° Lanchonete Zero Grau</a></li>
+    <Li><a href="https://www.instagram.com/houseburguervha/">6°House Burguer Vilhena</a></li>
+    <Li><a href="https://www.cacaushow.com.br/">7° Cacau Show</a></li>
+    <Li><a href="https://www.instagram.com/kenko.vilhena/">8° Kenko Vilhena</a></li>
+    <Li><a href="https://www.instagram.com/domenico.pizzeria/">9° Domenico Pizzeria</a></li>
+    <Li><a href="http://www.macarronato.com.br/">10° Macarronato</a></li>
+
 </body>
 </html>
