--- a/Restaurante.html
+++ b/Restaurante.html
@@ -10,7 +10,7 @@
     <Li><a href="https://www.facebook.com/restaurantedegustarevha/?locale=pt_BR">1° Degustare</a></li>
     <Li><a href="https://www.facebook.com/lavarandavha/?locale=pt_BR">2° Choperia La Lavanda</a></li>        
     <Li><a href="https://pt-br.facebook.com/subwayvilhena/">3° Subway </a></li>   
-    <Li><a href="https://www.facebook.com/BarolloPizza/?locale=pt_BR">4° Barollo Pizarria</a></li>
+    <Li><a href="https://www.instagram.com/restauranterecantodapraca/">4° Restaurante Recanto da Praça</a></li>
     <Li><a href="https://www.instagram.com/lanchonete.zerograu/">5° Lanchonete Zero Grau</a></li>
     <Li><a href="https://www.instagram.com/houseburguervha/">6°House Burguer Delivery</a></li>
     <Li><a href="https://www.cacaushow.com.br/">7° Cacau Show</a></li>
