--- a/Restaurante.html
+++ b/Restaurante.html
@@ -64,7 +64,7 @@
 
 </body>
 <footer>
-    &copy; 2023 Lista de restaurantes. Todos os direitos reservados.
+     @2023 Lista de restaurantes. Todos os direitos reservados.
   </footer>
 
 </html>
