--- a/restaurante.html
+++ b/restaurante.html
@@ -19,38 +19,47 @@
         <a href="https://www.facebook.com/restaurantedegustarevha/?locale=pt_BR" target="_blank">
             <button>Ir para o site</button>
         </a>
+        <img src="image_url_1.jpg" alt="Restaurant 1">
         <Li>2° Choperia La Lavaranda:
             <a href="https://www.facebook.com/lavarandavha/?locale=pt_BR" target="_blank">
                 <button>Ir para o site</button>
             </a>
+            <img src="image_url_1.jpg" alt="Restaurant 1">
          <Li>3° Subway:   
              <a href="https://pt-br.facebook.com/subwayvilhena/" target="_blank">
                     <button>Ir para o site</button>
                 </a>
+             <img src="image_url_1.jpg" >
         <Li>4° Recanto da Praça:   
              <a href="https://www.instagram.com/restauranterecantodapraca/" target="_blank">
                         <button>Ir para o site</button>
                     </a>
+            <img src="image_url_1.jpg" >
         <Li>5° Zerograu:      
                 <a href="https://www.instagram.com/lanchonete.zerograu/" target="_blank">
                             <button>Ir para o site</button>
                         </a>   
+            <img src="image_url_1.jpg">
         <Li>House Burguer:    
                 <a href="https://www.instagram.com/houseburguervha/" target="_blank">
                                 <button>Ir para o site</button>
-                            </a>     
+                            </a>    
+            <img src="image_url_1.jpg" >
         <Li>Cacau Show
                                 <a href="https://www.cacaushow.com.br/" target="_blank">
                                     <button>Ir para o site</button>
                                 </a>
+            <img src="image_url_1.jpg">
         <Li>Kenko:    
                                     <a href="https://www.instagram.com/kenko.vilhena/" target="_blank">
                                         <button>Ir para o site</button>
                                     </a>
+            <img src="image_url_1.jpg" >
         <Li>Domenico:    
                                         <a href="https://www.instagram.com/domenico.pizzeria/" target="_blank">
                                             <button>Ir para o site</button>
                                         </a>
+            <img src="image_url_1.jpg">
         <Li>Macarronato   
                                             <a href="http://www.macarronato.com.br/" target="_blank">
                                                 <button>Ir para o site</button>
