--- a/restaurante.html
+++ b/restaurante.html
@@ -19,12 +19,12 @@
         <a href="https://www.facebook.com/restaurantedegustarevha/?locale=pt_BR" target="_blank">
             <button>Ir para o site</button>
         </a>
-        <img src="image_url_1.jpg" alt="Restaurant 1">
+        <img src="degustare.png" ">
         <Li>2° Choperia La Lavaranda:
             <a href="https://www.facebook.com/lavarandavha/?locale=pt_BR" target="_blank">
                 <button>Ir para o site</button>
             </a>
-            <img src="image_url_1.jpg" alt="Restaurant 1">
+            <img src="la varanda.jfif" >
          <Li>3° Subway:   
              <a href="https://pt-br.facebook.com/subwayvilhena/" target="_blank">
                     <button>Ir para o site</button>
@@ -34,35 +34,37 @@
              <a href="https://www.instagram.com/restauranterecantodapraca/" target="_blank">
                         <button>Ir para o site</button>
                     </a>
-            <img src="image_url_1.jpg" >
+            <img src="recanto da praça.jfif" >
         <Li>5° Zerograu:      
                 <a href="https://www.instagram.com/lanchonete.zerograu/" target="_blank">
                             <button>Ir para o site</button>
                         </a>   
-            <img src="image_url_1.jpg">
+            <img src="zerograu.png">
         <Li>House Burguer:    
                 <a href="https://www.instagram.com/houseburguervha/" target="_blank">
                                 <button>Ir para o site</button>
                             </a>    
-            <img src="image_url_1.jpg" >
+            <img src="house burger.png" >
         <Li>Cacau Show
                                 <a href="https://www.cacaushow.com.br/" target="_blank">
                                     <button>Ir para o site</button>
                                 </a>
-            <img src="image_url_1.jpg">
+            <img src="cacau show.png">
         <Li>Kenko:    
                                     <a href="https://www.instagram.com/kenko.vilhena/" target="_blank">
                                         <button>Ir para o site</button>
                                     </a>
-            <img src="image_url_1.jpg" >
+            <img src="kenko.jfif" >
         <Li>Domenico:    
                                         <a href="https://www.instagram.com/domenico.pizzeria/" target="_blank">
                                             <button>Ir para o site</button>
                                         </a>
-            <img src="image_url_1.jpg">
+            <img src="domenico.jpg">
         <Li>Macarronato   
                                             <a href="http://www.macarronato.com.br/" target="_blank">
                                                 <button>Ir para o site</button>
+                                                </a>
+                                                 <img src="domenico.jpg">
 
       
       
