--- a/visita.html
+++ b/visita.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <body>
-  <h1>Galeria de fotos</h1>
+  <h1>Galeria de fotos</h1><br>
+    aqui ficara o texto de relatório da visita. <br>
+    <h1>Aqui ficara a Galeria de fotos</h1><br>
   </body>
 </head>
 </html>
