--- a/restaurante.html
+++ b/restaurante.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <head>
-        <title>Minha Loja de Chá</title>
+        <title>restuarante projetos/title>
         <link rel="stylesheet" href="styles.css">
       </head>
 </head>
