--- a/visita.html
+++ b/visita.html
@@ -7,13 +7,12 @@
 <title>Galeria de Fotos</title>
 </head>
 <body style="background-color: #F0E68C;">
-  <p>Galeria de Fotos</p><br>
   <h2>Relatório de Visita Técnica ao Campus Colorado</h2>
   <p>No dia 18 de Agosto, foi realizada uma visita técnica ao campus da Universidade Colorado com o objetivo de conhecer o campus e explorar suas instalações. A visita proporcionou uma oportunidade valiosa para conhecer de perto o ambiente acadêmico e as atividades em andamento.</p>
   <p>Durante a visita, foi possível percorrer o campus e capturar diversas imagens representativas dos edifícios, áreas de convívio estudantil e espaços de aprendizado. Através dessa tarefa, foi evidenciada a diversidade arquitetônica do campus e a atmosfera vibrante que o permeia.</p>
   <p>Além das atividades de fotografia, houve também a oportunidade de explorar o campo físico da universidade. As instalações que remetem aos cursos lá ofertados foram também exploradas, proporcionando uma compreensão mais profunda das atividades acadêmicas em curso.</p>
   <p>Em conclusão, a visita técnica ao campus Colorado foi extremamente proveitosa e enriquecedora. A tarefa de fotografar o campus proporcionou uma visão abrangente das instalações, enquanto a exploração do campo físico e a imersão no projeto de câmara escura contribuíram para uma compreensão mais profunda dos aspectos acadêmicos e técnicos da universidade. A experiência foi enriquecedora e ampliou nossa percepção sobre a importância da fotografia e do ambiente universitário.</p>
-  <h2>imagens da visita</h2><br>
+  <h1>Galeria de imagens</h1><br>
   <div class="gallery">
     <img src="20230816_105646.jpg" alt="Image 1" class="image">
     <img src="20230816_144604.jpg" alt="Image 2" class="image">
@@ -21,10 +20,10 @@
     <img src="20230816_145502.jpg" alt="Image 4" class="image">
     <img src="20230816_150025.jpg" alt="Image 5" class="image">
     <img src="20230816_153056.jpg" alt="Image 6" class="image">
-    <img src="20230816_154853" alt="Image 7" class="image">
+    <img src="20230816_154853.jpg" alt="Image 7" class="image">
     <img src="20230816_155844.jpg" alt="Image 8" class="image">
     <img src="2259D141-1FE1-4C34-8E79-CBE2111A748F.jpg" alt="Image 9" class="image">
-    <img src="IMG_0136.HEIC" alt="Image 10" class="image">
+    <img src="IMG-20230822-WA0058.jpg" alt="Image 10" class="image">
   </div>
   <script src="JavaVisita.js"></script>
 </body>
