--- a/visita.html
+++ b/visita.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="stylesVisita.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Relatório de Visita Técnica ao Campus Colorado</title>
 </head>
 <body>
@@ -28,5 +28,6 @@
   </div>
 </body>
 </html>
+
 <
 
