--- a/visita.html
+++ b/visita.html
@@ -15,42 +15,22 @@
   <p>Em conclusão, a visita técnica ao campus Colorado foi extremamente proveitosa e enriquecedora. A tarefa de fotografar o campus proporcionou uma visão abrangente das instalações, enquanto a exploração do campo físico e a imersão no projeto de câmara escura contribuíram para uma compreensão mais profunda dos aspectos acadêmicos e técnicos da universidade. A experiência foi enriquecedora e ampliou nossa percepção sobre a importância da fotografia e do ambiente universitário.</p>
   <h2>Aqui ficará a Galeria de Fotos</h2><br>
   <div class="gallery">
-    <img src="fotos/20230816_105646.jpg" alt="Image 1" class="image" width = "200">
-    <img src="fotos/20230816_144604.jpg" alt="Image 2" class="image" width = "200">
-    <img src="fotos/20230816_144748.jpg" alt="Image 3" class="image" width = "200">
-    <img src="fotos/20230816_145502.jpg" alt="Image 4" class="image" width = "200">
-    <img src="fotos/20230816_150025.jpg" alt="Image 5" class="image" width = "200">
-    <img src="fotos/20230816_153056.jpg" alt="Image 6" class="image" width = "200">
-    <img src="fotos/20230816_154853.jpg" alt="Image 7" class="image" width = "200">
-    <img src="fotos/20230816_155844.jpg" alt="Image 8" class="image" width = "200">
-    <img src="fotos/2259D141-1FE1-4C34-8E79-CBE2111A748F.jpg" alt="Image 9" class="image" width = "200">
-    <img src="fotos/IMG-20230822-WA0058.jpg" alt="Image 10" class="image" width = "200">
-    <a class="prev" onclick="changeImage(-1)">&#10094;</a>
-    <a class="next" onclick="changeImage(1)">&#10095;</a>
+    <img src="fotos/20230816_105646.jpg" alt="Image 1" class="image">
+    <img src="fotos/20230816_144604.jpg" alt="Image 2" class="image">
+    <img src="fotos/20230816_144748.jpg" alt="Image 3" class="image">
+    <img src="fotos/20230816_145502.jpg" alt="Image 4" class="image">
+    <img src="fotos/20230816_150025.jpg" alt="Image 5" class="image">
+    <img src="fotos/20230816_153056.jpg" alt="Image 6" class="image">
+    <img src="fotos/20230816_154853.jpg" alt="Image 7" class="image">
+    <img src="fotos/20230816_155844.jpg" alt="Image 8" class="image">
+    <img src="fotos/2259D141-1FE1-4C34-8E79-CBE2111A748F.jpg" alt="Image 9" class="image">
+    <img src="fotos/IMG-20230822-WA0058.jpg" alt="Image 10" class="image">
+    <div class="navigation">
+      <button onclick="changeImage(-1)">Anterior</button>
+      <button onclick="changeImage(1)">Próxima</button>
+    </div>
   </div>
-  <script src="script.js"></script>
-  <script>
-    let currentImageIndex = 0;
-    const images = document.querySelectorAll('.image');
-
-    function changeImage(direction) {
-      currentImageIndex += direction;
-      if (currentImageIndex < 0) {
-        currentImageIndex = images.length - 1;
-      } else if (currentImageIndex >= images.length) {
-        currentImageIndex = 0;
-      }
-      showImage(currentImageIndex);
-    }
-
-    function showImage(index) {
-      images.forEach((image, i) => {
-        image.style.display = i === index ? 'block' : 'none';
-      });
-    }
-
-    showImage(currentImageIndex);
-  </script>
+  <script src="JavaVisita.js"></script>
 </body>
 </html>
 
