--- a/visita.html
+++ b/visita.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: #F0E68C;">
   <h1>Galeria de Fotos</h1><br>
-  <p>**Relatório de Visita Técnica ao Campus Colorado**</p>
+  <p>Relatório de Visita Técnica ao Campus Colorado</p>
   <p>No dia 18 de Agosto, foi realizada uma visita técnica ao campus da Universidade Colorado com o objetivo de conhecer o campus e explorar suas instalações. A visita proporcionou uma oportunidade valiosa para conhecer de perto o ambiente acadêmico e as atividades em andamento.</p>
   <p>Durante a visita, foi possível percorrer o campus e capturar diversas imagens representativas dos edifícios, áreas de convívio estudantil e espaços de aprendizado. Através dessa tarefa, foi evidenciada a diversidade arquitetônica do campus e a atmosfera vibrante que o permeia.</p>
   <p>Além das atividades de fotografia, houve também a oportunidade de explorar o campo físico da universidade. As instalações que remetem aos cursos lá ofertados foram também exploradas, proporcionando uma compreensão mais profunda das atividades acadêmicas em curso.</p>
