--- a/visita.html
+++ b/visita.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="stylesVisita.css">
 <title>Zoomable Image Gallery</title>
 </head>
-<body style="background-color: #F0E68C;">
+<body style="background-color: #FFA07A;">
   <h1>Galeria de Fotos</h1><br>
   <p>Relatório de Visita Técnica ao Campus Colorado</p>
   <p>No dia 18 de Agosto, foi realizada uma visita técnica ao campus da Universidade Colorado com o objetivo de conhecer o campus e explorar suas instalações. A visita proporcionou uma oportunidade valiosa para conhecer de perto o ambiente acadêmico e as atividades em andamento.</p>
