--- a/restaurante.html
+++ b/restaurante.html
@@ -20,7 +20,7 @@
             <button>Ir para o site</button>
         </a>
        
-        <Li><img src="https://scontent.fpbq1-1.fna.fbcdn.net/v/t39.30808-6/359793133_787226840072640_6154272448986498903_n.png?_nc_cat=102&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=qAK0ymqNIVQAX_NzMg0&_nc_ht=scontent.fpbq1-1.fna&oh=00_AfAvz4Xofd86qruQ3yU00D9qiM9UeIriZKyvn5RIhJg1Bw&oe=64E85B71"width="100">
+        <Li><img src="width="100">
             <br> 2° Choperia La Lavaranda:<br>
             <a href="https://www.facebook.com/lavarandavha/?locale=pt_BR" target="_blank">
                 <button>Ir para o site</button>
