--- a/restaurante.html
+++ b/restaurante.html
@@ -20,7 +20,7 @@
             <button>Ir para o site</button>
         </a>
        
-        <Li><img src="width="100">
+        <Li><img src="img/"width="100">
             <br> 2° Choperia La Lavaranda:<br>
             <a href="https://www.facebook.com/lavarandavha/?locale=pt_BR" target="_blank">
                 <button>Ir para o site</button>
