--- a/visita.html
+++ b/visita.html
@@ -14,6 +14,9 @@
   <p>Além das atividades de fotografia, houve também a oportunidade de explorar o campo físico da universidade. As instalações que remetem aos cursos lá ofertados foram também exploradas, proporcionando uma compreensão mais profunda das atividades acadêmicas em curso.</p>
   <p>Em conclusão, a visita técnica ao campus Colorado foi extremamente proveitosa e enriquecedora. A visita ao campus proporcionou uma visão abrangente das instalações de aprendizado que seus alunos utilizam, enquanto a exploração do campo físico e a imersão no projeto de câmara escura contribuíram para uma compreensão mais profunda dos aspectos acadêmicos e técnicos da universidade.</p>
   <h2>Aqui ficará a Galeria de Fotos</h2><br>
+  <div class="letreiro">
+     <h2>Aqui ficará a Galeria de Fotos</h2><br>
+  </div>
   <div class="gallery">
     <img src="fotos/20230816_105646.jpg" alt="Image 1" class="image">
     <img src="fotos/20230816_144604.jpg" alt="Image 2" class="image">
