--- a/visita.html
+++ b/visita.html
@@ -17,6 +17,7 @@
 <style>
   .galeriacentro {
     text-align: center;
+      font-size: 18px;
   }
 </style>
 <p class="galeriacentro">Aqui ficara a Galeria de fotos:</p>
