--- a/visita.html
+++ b/visita.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="stylesVisita.css">
 <title>Galeria</title>
 </head>
-<body style="background-color: #fff2f2;">
+<body style="background-color:  #F5F5F5;">
   <h2>Galeria de Fotos</h2><br>
   <p>Relatório de Visita Técnica ao Campus Colorado</p>
   <p>No dia 16 de Agosto, foi realizada uma visita técnica ao campus  Colorado com o objetivo de conhecer o campus e explorar suas instalações. A visita proporcionou uma oportunidade valiosa para conhecer de perto o ambiente acadêmico e as atividades em andamento.</p>
