--- a/visita.html
+++ b/visita.html
@@ -17,16 +17,17 @@
 
    
 <div class="thumbnails">
-  <img src="fotos/20230816_105646.jpg" alt="Image 1" class="thumbnail" onclick="openFullScreen(1)">
-  <img src="fotos/20230816_144604.jpg" alt="Image 2" class="thumbnail" onclick="openFullScreen(2)">
-  <img src="fotos/20230816_144748.jpg" alt="Image 3" class="thumbnail" onclick="openFullScreen(3)">
-  <img src="fotos/20230816_145502.jpg" alt="Image 4" class="thumbnail" onclick="openFullScreen(4)">
-  <img src="fotos/20230816_150025.jpg" alt="Image 5" class="thumbnail" onclick="openFullScreen(5)">
-  <img src="fotos/20230816_153056.jpg" alt="Image 6" class="thumbnail" onclick="openFullScreen(6)">
-  <img src="fotos/20230816_154853.jpg" alt="Image 7" class="thumbnail" onclick="openFullScreen(7)">
-  <img src="fotos/20230816_155844.jpg" alt="Image 8" class="thumbnail" onclick="openFullScreen(8)">
-  <img src="fotos/2259D141-1FE1-4C34-8E79-CBE2111A748F.jpg" alt="Image 9" class="thumbnail" onclick="openFullScreen(9)">
-  <img src="fotos/IMG-20230822-WA0058.jpg" alt="Image 10" class="thumbnail" onclick="openFullScreen(10)">
+  <img src="fotos/20230816_105646.jpg" alt="Image 1" class="thumbnail" onclick="openFullScreen(0)">
+  <img src="fotos/20230816_144604.jpg" alt="Image 2" class="thumbnail" onclick="openFullScreen(1)">
+  <img src="fotos/20230816_144748.jpg" alt="Image 3" class="thumbnail" onclick="openFullScreen(2)">
+  <img src="fotos/20230816_145502.jpg" alt="Image 4" class="thumbnail" onclick="openFullScreen(3)">
+  <img src="fotos/20230816_150025.jpg" alt="Image 5" class="thumbnail" onclick="openFullScreen(4)">
+  <img src="fotos/20230816_153056.jpg" alt="Image 6" class="thumbnail" onclick="openFullScreen(5)">
+  <img src="fotos/20230816_154853.jpg" alt="Image 7" class="thumbnail" onclick="openFullScreen(6)">
+  <img src="fotos/20230816_155844.jpg" alt="Image 8" class="thumbnail" onclick="openFullScreen(7)">
+  <img src="fotos/2259D141-1FE1-4C34-8E79-CBE2111A748F.jpg" alt="Image 9" class="thumbnail" onclick="openFullScreen(8)">
+  <img src="fotos/IMG-20230822-WA0058.jpg" alt="Image 10" class="thumbnail" onclick="openFullScreen(9)">
+</div>
 </div>
    
   </div>
