--- a/visita.html
+++ b/visita.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="stylesVisita.css">
-<title>Zoomable Image Gallery</title>
+<title>galeria</title>
 </head>
 <body style="background-color: #fadaef;">
   <h1>Galeria de Fotos</h1><br>
