--- a/visita.html
+++ b/visita.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: #fadaef;">
   <h1>Galeria de Fotos</h1><br>
-  <p>**Relatório de Visita Técnica ao Campus Colorado**</p>
+  <h2>Relatório de Visita Técnica ao Campus Colorado</h2>
   <p>No dia 16 de Agosto, foi realizada uma visita técnica ao campus  Colorado com o objetivo de conhecer o campus e explorar suas instalações. A visita proporcionou uma oportunidade valiosa para conhecer de perto o ambiente acadêmico e as atividades em andamento.</p>
   <p>Durante a visita, almoçamos na dependencia do campus, almoço esse realizado com ingredientes produzido nas dependêcias do instituto, apos isso visitamos o auditório e as salas onde fomos palestrados e introduzidos ao projeto que motivou a nossa visita, o projeto Camâra escura, após tudo isso foi possível percorrer o campus e capturar diversas imagens representativas dos edifícios, áreas de convívio estudantil e espaços de aprendizado. Através dessa tarefa, foi evidenciada a diversidade arquitetônica do campus e a atmosfera vibrante que o permeia.</p>
   <p>Além das atividades de fotografia, houve também a oportunidade de explorar o campo físico do instituto onde as atividades agronômicas são desenvolvidas. As instalações que remetem as atividades foram muito bem exploradas, proporcionando uma compreensão mais profunda das atividades acadêmicas em curso.</p>
