--- a/midias.html
+++ b/midias.html
@@ -8,5 +8,8 @@
 </head>
 <body>
  <h1>Musica 1</h1>
+ <audio controls>
+	<source src="babado/danger.mpeg" type="audio/mpeg">
+</audio>
 </body>
 </html>
