--- a/midias.html
+++ b/midias.html
@@ -11,5 +11,18 @@
  <audio controls>
 	<source src="babado/danger.mpeg" type="audio/mpeg">
 </audio>
+	 <h1>Musica 2</h1>
+<audio controls>
+	<source src="babado/light my love.mpeg" type="audio/mpeg">
+</audio>
+	<h1>Video 1</h1>
+<video width="320" height="240" controls>
+  <source src="babado/lacrar.mp4" type="video/mp4">
+</video>
+	<h1>Video 2</h1>
+	<video width="320" height="240" controls>
+  <source src="babado/gay engraçado.mp4" type="video/mp4">
+</video>
+	
 </body>
 </html>
