--- a/midias.html
+++ b/midias.html
@@ -23,6 +23,8 @@
 	<video width="320" height="240" controls>
   <source src="babado/gay engraçado.mp4" type="video/mp4">
 </video>
+	<h1>Video do youtube</h1>
+<embed src="https://youtu.be/C9FjdZBa_VA?si=xD24qSSTbnxie3lL" allowfullscreen="true" width="425" height="344">
 	
 </body>
 </html>
