--- a/midias.html
+++ b/midias.html
@@ -24,7 +24,7 @@
   <source src="babado/gay engraçado.mp4" type="video/mp4">
 </video>
 	<h1>Video do youtube</h1>
-<embed src="https://youtu.be/C9FjdZBa_VA?si=xD24qSSTbnxie3lL" allowfullscreen="true" width="425" height="344">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/C9FjdZBa_VA?si=xD24qSSTbnxie3lL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	
 </body>
 </html>
