--- a/midias.html
+++ b/midias.html
@@ -23,7 +23,7 @@
 	<video width="320" height="240" controls>
   <source src="babado/gay engraçado.mp4" type="video/mp4">
 </video>
-	<h1>Video do youtube</h1>
+	<h1>Youtube</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/C9FjdZBa_VA?si=xD24qSSTbnxie3lL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	
 </body>
