--- a/radio.html
+++ b/radio.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesVisita.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="musica.css">
+    <script src="radio.js" defer></script>
     <title>Galeria de Músicas</title>
 </head>
 <body>
