--- a/radio.html
+++ b/radio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Player de Música com Fundo de Vídeo</title>
+    <title>Danify</title></title>
     <link rel="stylesheet" href="radio.css">
 </head>
 <body>
