--- a/radio.html
+++ b/radio.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Player de Música com Fundo de Vídeo</title>
+    <title>Danify</title>
     <link rel="stylesheet" href="radio.css">
 </head>
 <body>
     <video id="video-bg" autoplay muted loop>
-        <source src="videomp4/Green and Orange Vertical.mp4" type="video/mp4">
-        Seu navegador não suporta vídeos em HTML5.
+        <source src="videomp47/Green and Orange Vertical.mp4" type="video/mp4">
     </video>
     <div class="player-container">
         <div class="image-container">
-            <img src="videomp4/gatinho.jpg" alt="Imagem da capa da música">
+            <img src="videomp47/gatinho.jpg" alt="Imagem da capa da música">
         </div>
         <div class="audio-info neon-glow">
             <p>Nome da Música</p>
