--- a/radio.html
+++ b/radio.html
@@ -36,6 +36,7 @@
             <button id="play-pause-button">Play</button>
             <button id="next-button">Próxima</button>
         </div>
+        <div class="beat"></div>
     </div>
     <script src="radio.js"></script>
 </body>
