--- a/radio.html
+++ b/radio.html
@@ -31,12 +31,13 @@
             <source src="radiomp3/URIAS - DANGER ( OFFICIAL VISUALIZER)(MP3_160K).mp3" type="audio/mpeg">
             <source src="radiomp3/Wait a Minute_(MP3_160K).mp3" type="audio/mpeg">
         </audio>
+         </audio>
+        <div class="beat neon-glow"></div> 
         <div class="controls">
             <button id="prev-button">Anterior</button>
             <button id="play-pause-button">Play</button>
             <button id="next-button">Próxima</button>
         </div>
-        <div class="beat"></div>
     </div>
     <script src="radio.js"></script>
 </body>
