--- a/radio.html
+++ b/radio.html
@@ -13,7 +13,7 @@
     </video>
     <div class="player-container">
         <div class="image-container">
-            <img src="videomp47/gatinho.jpg" alt="Imagem da capa da música">
+            <img src="videomp47/gatinhomusica.jpg" alt="Imagem da capa da música">
         </div>
         <div class="audio-info neon-glow">
             <p id="nome-da-musica">Nome da Música</p>
